# pybadraft

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: decorator.py  packet.proto  packet.py  raft.py  raft_asyncio.py  raft_threading.py  roles.py
src/LogReplication/: __init__.py  replication.py  utilities.py
tests/: Dockerfile  integration_test.py  integration_test_async.py  requirements.txt
