[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybadraft"
version = "0.0.1"
description = "This is a draft for my RAFT package"
authors = [
    { name = "Anthony Cheng", email = "sunnyanthonycheng@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
homepage = "PyBadRaft"
repository = "https://github.com/sunnyanthony/pybadraft"

[tool.setuptools]
package-dir = {"pybadraft" = "src"}

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["tests/requirements.txt"] } }
